[project]
name = "skaha"
version = "1.6.0"
requires-python = ">=3.9"
description = "Python Client for CANFAR Science Platform"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["skaha", "canfar", "python", "client", "container", "platform"]
authors =[
    {"name"="Shiny Brar", "email"="shiny.brar@nrc-cnrc.gc.ca"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "defusedxml>=0.7.1",
    "httpx>=0.28.1",
    "pydantic>=2.9.2",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "vos>=3.6.1.1",
]

[project.urls]
"homepage"="https://shinybrar.github.io/skaha/"
"repository"="https://github.com/shinybrar/skaha"
"documentation"="https://shinybrar.github.io/skaha/"
"changelog"="https://shinybrar.github.io/skaha/changelog/"
"issues"="https://github.com/shinybrar/skaha/issues"

[tool.uv]
dev-dependencies = [
    "black>=23",
    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
    "mkdocs-material>=9.5.41",
    "mkdocstrings-python>=1",
    "mypy>=1.12.0",
    "pre-commit>=3",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "types-toml>=0.10.8.20240310",
    "types-defusedxml>=0.7.0.20240117",
    "pytest-order>=1.3.0",
    "mike>=2.1.3",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "B", "I"]
ignore = ["B904", "B028"]
extend-ignore = ["D"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]
